# gammatml

./: .gitignore  README.md  pyproject.toml
gammatmlgcib/: average_numpy.py  db_REFPROP_descriptors.csv
gammatmlgcib/params/ANN_models_TempDep/gammaT-REFPROP-LM-average/: params_seed1.npz  params_seed12.npz  params_seed1337.npz
gammatmlgcib/params/ANN_models_TempDep_cossim/gammaT-REFPROP-LM-average/: params_seed1.npz  params_seed12.npz  params_seed1337.npz
gammatmlgcib/params/ANN_models_TempDep_cossim_reg4_d2y/gammaT-REFPROP-LM-average/: params_seed0.npz  params_seed12.npz  params_seed1337.npz  params_seed42.npz
gammatmlgcib/params/ANN_models_TempDep_reg4_d2y/gammaT-REFPROP-LM-average/: params_seed0.npz  params_seed1.npz  params_seed12.npz  params_seed1337.npz  params_seed42.npz
gammatmlgcib/params/ANN_models_TempInd/gammaT-REFPROP-LM-average/: params_seed1.npz  params_seed12.npz  params_seed42.npz
params/ANN_models_TempDep/gammaT-REFPROP-LM-average/: params_seed0.npz  params_seed42.npz
params/ANN_models_TempDep_cossim/gammaT-REFPROP-LM-average/: params_seed0.npz  params_seed42.npz
params/ANN_models_TempDep_cossim_reg4_d2y/gammaT-REFPROP-LM-average/: params_seed1.npz
params/ANN_models_TempInd/gammaT-REFPROP-LM-average/: params_seed0.npz  params_seed1337.npz
params/ANN_models_TempInd_cossim/gammaT-REFPROP-LM-average/: params_seed0.npz  params_seed1.npz
params/ANN_models_TempInd_cossim_reg4/gammaT-REFPROP-LM-average/: params_seed0.npz
params/ANN_models_TempInd_reg4/gammaT-REFPROP-LM-average/: params_seed1.npz
(+11 files in other folders)
